--- a/src/App.css
+++ b/src/App.css
@@ -23,23 +23,23 @@ body {
 }
 
 .img-responsive {
-  width: 100%; /* La imagen se ajusta al 100% del ancho del contenedor */
-  height: auto; /* Mantiene la proporción de la imagen */
-  max-width: 100%; /* No excede el 100% del contenedor */
-  object-fit: cover; /* Mantiene la imagen bien encajada */
-  border-radius: 8px; /* Opcional: bordes redondeados */
-  transition: all 0.3s ease; /* Transición suave al redimensionar */
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  object-fit: cover;
+  border-radius: 8px;
+  transition: all 0.3s ease;
 }
 
 @media (min-width: 768px) {
   .img-responsive {
-    max-width: 75%; /* Límite de ancho en pantallas medianas */
+    max-width: 75%;
   }
 }
 
 @media (min-width: 1024px) {
   .img-responsive {
-    max-width: 90%; /* Límite de ancho en pantallas grandes */
+    max-width: 90%;
   }
 }
 
