--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
 .navlinks {
   font-family: "Mitr", sans-serif;
   color: black;
-  font-size: small;
+  font-size: 18px;
 }
 
 .radius {
@@ -44,8 +44,8 @@ body {
 }
 
 .ts-icons {
-  width: 22px;
-  height: 22px;
+  width: 28px;
+  height: 28px;
   transition: transform 0.3s ease;
 }
 
@@ -69,7 +69,7 @@ body {
 }
 
 .foto {
-  border: solid 3.15px #060606;
+  border: solid 3.6px #060606;
   border-radius: 30%;
   animation: slide;
   animation-duration: 8s;
@@ -79,12 +79,6 @@ body {
   animation-direction: normal;
   animation-fill-mode: none;
   animation-play-state: running;
-}
-
-.img {
-  max-width: 100%;
-  height: auto;
-  display: block;
 }
 
 .circular-image {
